go and jump btn css fixed

--- a/Dough-Not-Get-Eaten/css/style.css
+++ b/Dough-Not-Get-Eaten/css/style.css
@@ -179,8 +179,15 @@ text-align: center;
     top: 370px; 
      left: 320px; 
 }
-/* #go-btn-player-1a,#go-btn-player-2{
-   top: 370px; 
-     left: 320px; 
-} */
+#jump-btn2{
+ position:absolute;
+top:400px;
+left: 490px; 
+color:white;
+text-shadow:1px 1px black;
+width: 50px;
+height:50px;
+font-size: 15px;
+font-weight: 900;
+}
 
